@@ -1,41 +1,44 @@
 package com.denizenscript.denizen.nms.v1_19.impl;
 
+import com.denizenscript.denizen.nms.NMSHandler;
 import com.denizenscript.denizen.nms.abstracts.ProfileEditor;
+import com.denizenscript.denizen.nms.util.PlayerProfile;
 import com.denizenscript.denizen.nms.v1_19.Handler;
+import com.denizenscript.denizen.nms.v1_19.ReflectionMappingsInfo;
 import com.denizenscript.denizen.nms.v1_19.helpers.PacketHelperImpl;
 import com.denizenscript.denizen.nms.v1_19.impl.network.handlers.DenizenNetworkManagerImpl;
 import com.denizenscript.denizen.scripts.commands.entity.RenameCommand;
 import com.denizenscript.denizen.utilities.FormattedTextHelper;
-import com.mojang.authlib.GameProfile;
-import com.mojang.authlib.properties.Property;
-import com.denizenscript.denizen.nms.NMSHandler;
-import com.denizenscript.denizen.nms.util.PlayerProfile;
 import com.denizenscript.denizencore.utilities.ReflectionHelper;
 import com.denizenscript.denizencore.utilities.debugging.Debug;
-import io.netty.buffer.Unpooled;
+import com.mojang.authlib.GameProfile;
+import com.mojang.authlib.properties.Property;
 import net.md_5.bungee.api.ChatColor;
-import net.minecraft.network.FriendlyByteBuf;
 import net.minecraft.network.chat.Component;
+import net.minecraft.network.protocol.game.ClientboundPlayerInfoRemovePacket;
 import net.minecraft.network.protocol.game.ClientboundPlayerInfoUpdatePacket;
-import net.minecraft.server.level.ServerPlayer;
 import net.minecraft.server.level.ServerLevel;
+import net.minecraft.server.level.ServerPlayer;
 import org.bukkit.Bukkit;
 import org.bukkit.craftbukkit.v1_19_R2.CraftServer;
 import org.bukkit.craftbukkit.v1_19_R2.entity.CraftPlayer;
 import org.bukkit.entity.Player;
 
-import java.lang.reflect.Field;
-import java.util.*;
+import java.util.EnumSet;
+import java.util.List;
+import java.util.UUID;
 
 public class ProfileEditorImpl extends ProfileEditor {
 
     @Override
     protected void updatePlayer(final Player player, final boolean isSkinChanging) {
-        final ServerPlayer entityPlayer = ((CraftPlayer) player).getHandle();
+        final ServerPlayer nmsPlayer = ((CraftPlayer) player).getHandle();
         final UUID uuid = player.getUniqueId();
-        ClientboundPlayerInfoUpdatePacket playerInfo = new ClientboundPlayerInfoUpdatePacket(ClientboundPlayerInfoUpdatePacket.Action.ADD_PLAYER, entityPlayer);
+        ClientboundPlayerInfoRemovePacket removePlayerInfoPacket = new ClientboundPlayerInfoRemovePacket(List.of(uuid));
+        ClientboundPlayerInfoUpdatePacket addPlayerInfoPacket = ClientboundPlayerInfoUpdatePacket.createPlayerInitializing(List.of(nmsPlayer));
         for (Player otherPlayer : Bukkit.getServer().getOnlinePlayers()) {
-            PacketHelperImpl.send(otherPlayer, playerInfo);
+            PacketHelperImpl.send(otherPlayer, removePlayerInfoPacket);
+            PacketHelperImpl.send(otherPlayer, addPlayerInfoPacket);
         }
         for (Player otherPlayer : NMSHandler.entityHelper.getPlayersThatSee(player)) {
             if (!otherPlayer.getUniqueId().equals(uuid)) {
@@ -43,37 +46,34 @@ public class ProfileEditorImpl extends ProfileEditor {
             }
         }
         if (isSkinChanging) {
-            ((CraftServer) Bukkit.getServer()).getHandle().respawn(entityPlayer, (ServerLevel) entityPlayer.level, true, player.getLocation(), false);
+            ((CraftServer) Bukkit.getServer()).getHandle().respawn(nmsPlayer, (ServerLevel) nmsPlayer.level, true, player.getLocation(), false);
         }
         player.updateInventory();
     }
 
     public static boolean handleAlteredProfiles(ClientboundPlayerInfoUpdatePacket packet, DenizenNetworkManagerImpl manager) {
-        if (ProfileEditor.mirrorUUIDs.isEmpty() && !RenameCommand.hasAnyDynamicRenames()) {
+        if (ProfileEditor.mirrorUUIDs.isEmpty() && !RenameCommand.hasAnyDynamicRenames() && fakeProfiles.isEmpty()) {
             return true;
         }
-        EnumSet<ClientboundPlayerInfoUpdatePacket.Action> action = packet.actions();
-        if (!action.contains(ClientboundPlayerInfoUpdatePacket.Action.ADD_PLAYER) && !action.contains(ClientboundPlayerInfoUpdatePacket.Action.UPDATE_DISPLAY_NAME)) {
-            return true;
-        }
-        List<ClientboundPlayerInfoUpdatePacket.Entry> dataList = packet.entries();
-        if (dataList == null) {
+        EnumSet<ClientboundPlayerInfoUpdatePacket.Action> actions = packet.actions();
+        if (!actions.contains(ClientboundPlayerInfoUpdatePacket.Action.ADD_PLAYER) && !actions.contains(ClientboundPlayerInfoUpdatePacket.Action.UPDATE_DISPLAY_NAME)) {
             return true;
         }
         try {
             boolean any = false;
-            for (ClientboundPlayerInfoUpdatePacket.Entry data : dataList) {
-                if (ProfileEditor.mirrorUUIDs.contains(data.profileId()) || RenameCommand.customNames.containsKey(data.profileId()) || fakeProfiles.containsKey(data.profileId())) {
+            for (ClientboundPlayerInfoUpdatePacket.Entry entry : packet.entries()) {
+                if (ProfileEditor.mirrorUUIDs.contains(entry.profileId()) || RenameCommand.customNames.containsKey(entry.profileId()) || fakeProfiles.containsKey(entry.profileId())) {
                     any = true;
+                    break;
                 }
             }
             if (!any) {
                 return true;
             }
             GameProfile ownProfile = manager.player.getGameProfile();
-            for (ClientboundPlayerInfoUpdatePacket.Entry data : dataList) {
+            for (ClientboundPlayerInfoUpdatePacket.Entry data : packet.entries()) {
                 if (!ProfileEditor.mirrorUUIDs.contains(data.profileId()) && !RenameCommand.customNames.containsKey(data.profileId()) && !fakeProfiles.containsKey(data.profileId())) {
-                    manager.oldManager.send(createInfoPacket(action, Collections.singletonList(data)));
+                    manager.oldManager.send(createInfoPacket(actions, List.of(data)));
                 }
                 else {
                     String rename = RenameCommand.getCustomNameFor(data.profileId(), manager.player.getBukkitEntity(), false);
@@ -88,7 +88,7 @@ public class ProfileEditorImpl extends ProfileEditor {
                     String listRename = RenameCommand.getCustomNameFor(data.profileId(), manager.player.getBukkitEntity(), true);
                     Component displayName = listRename != null ? Handler.componentToNMS(FormattedTextHelper.parse(listRename, ChatColor.WHITE)) : data.displayName();
                     ClientboundPlayerInfoUpdatePacket.Entry newData = new ClientboundPlayerInfoUpdatePacket.Entry(data.profileId(), patchedProfile, data.listed(), data.latency(), data.gameMode(), displayName, data.chatSession());
-                    manager.oldManager.send(createInfoPacket(action, Collections.singletonList(newData)));
+                    manager.oldManager.send(createInfoPacket(actions, List.of(newData)));
                 }
             }
             return false;
@@ -99,25 +99,10 @@ public class ProfileEditorImpl extends ProfileEditor {
         }
     }
 
-    public static final Field ClientboundPlayerInfoUpdatePacket_Action_writer = ReflectionHelper.getFields(ClientboundPlayerInfoUpdatePacket.Action.class).getFirstOfType(ClientboundPlayerInfoUpdatePacket.Action.Writer.class);
-
     public static ClientboundPlayerInfoUpdatePacket createInfoPacket(EnumSet<ClientboundPlayerInfoUpdatePacket.Action> actions, List<ClientboundPlayerInfoUpdatePacket.Entry> entries) {
-        // Based on ClientboundPlayerInfoUpdatePacket#write
-        FriendlyByteBuf buf = new FriendlyByteBuf(Unpooled.buffer());
-        buf.writeEnumSet(actions, ClientboundPlayerInfoUpdatePacket.Action.class);
-        buf.writeCollection(entries, (inBuf, entry) -> {
-            try {
-                inBuf.writeUUID(entry.profileId());
-                for (ClientboundPlayerInfoUpdatePacket.Action action : actions) {
-                    ClientboundPlayerInfoUpdatePacket.Action.Writer writer = (ClientboundPlayerInfoUpdatePacket.Action.Writer) ClientboundPlayerInfoUpdatePacket_Action_writer.get(action);
-                    writer.write(inBuf, entry);
-                }
-            }
-            catch (Throwable ex) {
-                Debug.echoError(ex);
-            }
-        });
-        return new ClientboundPlayerInfoUpdatePacket(buf);
+        ClientboundPlayerInfoUpdatePacket playerInfoUpdatePacket = new ClientboundPlayerInfoUpdatePacket(actions, List.of());
+        ReflectionHelper.setFieldValue(ClientboundPlayerInfoUpdatePacket.class, ReflectionMappingsInfo.ClientboundPlayerInfoUpdatePacket_entries, playerInfoUpdatePacket, entries);
+        return playerInfoUpdatePacket;
     }
 
     private static GameProfile getGameProfile(PlayerProfile playerProfile) {
